services/ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-service
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.2.9
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: ingress-nginx
