services/ingress/nginx-ingress-monitoring.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: kubernetes-ingress-monitoring
  namespace: default
spec:
  rules:
  - host: prometheus.gud
    http:
      paths:
      - backend:
          serviceName: monitoring-prometheus-server
          servicePort: 80
        path: /
  - host: alertmanager.gud
    http:
      paths:
      - backend:
          serviceName: monitoring-prometheus-alertmanager
          servicePort: 80
        path: /
  - host: pushgateway.gud
    http:
      paths:
      - backend:
          serviceName: monitoring-prometheus-pushgateway
          servicePort: 9091
        path: /
  - host: grafana.gud
    http:
      paths:
      - backend:
          serviceName: grafana-grafana
          servicePort: 80
        path: /
